` PlantUML <plantuml.com> State Diagram.
` Generated from src/main/java/io/temporal/internal/statemachines/WorkflowTaskStateMachine.java
` by io.temporal.internal.statemachines.CommandsGeneratePlantUMLStateDiagramsTest.


@startuml
title WorkflowTask State Transitions

[*] --> CREATED
CREATED --> SCHEDULED: WORKFLOW_TASK_SCHEDULED
SCHEDULED --> STARTED: WORKFLOW_TASK_STARTED
SCHEDULED --> TIMED_OUT: WORKFLOW_TASK_TIMED_OUT
STARTED --> COMPLETED: WORKFLOW_TASK_COMPLETED
STARTED --> FAILED: WORKFLOW_TASK_FAILED
STARTED --> TIMED_OUT: WORKFLOW_TASK_TIMED_OUT
COMPLETED --> [*]
TIMED_OUT --> [*]
FAILED --> [*]
center footer Copyright (C) 2020 Temporal Technologies, Inc. All Rights Reserved.
@enduml
